tests/snapshots/tekenizer__tekenizer_test__tekenizer_2.snap
---
source: tests/tekenizer.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "keyword",
            raw: "SELECT",
            span: Span {
                start: 0,
                end: 6,
            },
        },
    ],
)
