tests/snapshots/tekenizer__tekenizer_test__tekenizer_lexer_numeric.snap
---
source: tests/tekenizer.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "numeric",
            raw: "9",
            span: Span {
                start: 0,
                end: 1,
            },
        },
    ],
)
