tests/snapshots/tekenizer__tekenizer_test__tekenizer_lexer_regexp.snap
---
source: tests/tekenizer.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "regex",
            raw: "/",
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: "keyword",
            raw: "abc",
            span: Span {
                start: 1,
                end: 4,
            },
        },
        Token {
            kind: "regex",
            raw: "/",
            span: Span {
                start: 4,
                end: 5,
            },
        },
    ],
)
